# standx-point

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.agents/skills/ratatui-skills/: README-ja.md  README-zh.md  SKILL.md
.agents/skills/ratatui-skills/references/basics/: app-structure.md
.agents/skills/ratatui-skills/references/layout/: constraints.md  flex-modes.md
.agents/skills/ratatui-skills/references/widgets/: custom-widgets.md
.agents/skills/ratatui-skills/skills/styling/: SKILL.md
.github/workflows/: release.yml
.opencode/skills/ratatui-skills/: README.md
.opencode/skills/ratatui-skills/references/_shared/: rust-defaults.md
.opencode/skills/ratatui-skills/references/basics/: backends.md
.opencode/skills/ratatui-skills/references/styling/: colors.md  text-styling.md
.opencode/skills/ratatui-skills/references/widgets/: built-in-widgets.md
.opencode/skills/ratatui-skills/skills/basics/: SKILL.md
.opencode/skills/ratatui-skills/skills/layout/: SKILL.md
.opencode/skills/ratatui-skills/skills/widgets/: SKILL.md
.sisyphus/: boulder.json
.sisyphus/notepads/: problems.md
.sisyphus/notepads/auth-example/: decisions.md  learnings.md
.sisyphus/notepads/fix-auth-example/: learnings.md
.sisyphus/notepads/json-persistence/: SUMMARY.md  decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/menu-bar/: learnings.md
.sisyphus/notepads/mm-strategy/: issues.md  learnings.md
.sisyphus/notepads/ratatui-patterns/: learnings.md
.sisyphus/notepads/ratatui-tui-refactor/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/standx-api-adapter/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/standx-auth-cli-optimization/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/standx-point-gui/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/tui-refactor/: issues.md  learnings.md  problems.md
.sisyphus/plans/: mm-strategy.md  ratatui-tui-refactor.md  standx-api-adapter.md  standx-auth-cli-optimization.md  standx-point-gui.md  tui-refactor.md
crates/standx-point-adapter/: AGENTS.md  Cargo.toml  README.md
crates/standx-point-adapter/docs/: perps-http.md  perps-ws.md
crates/standx-point-adapter/examples/: auth_example.rs  auth_with_persistent_key.rs  market_data_example.rs  trading_example.rs  websocket_example.rs
crates/standx-point-adapter/src/: AGENTS.md  lib.rs
crates/standx-point-adapter/src/auth/: AGENTS.md  evm_wallet.rs  jwt.rs  manager.rs  mod.rs  persistent_key.rs  signer.rs  solana_wallet.rs  wallet.rs
crates/standx-point-adapter/src/http/: AGENTS.md  client.rs  error.rs  mod.rs  public.rs  signature.rs  trade.rs  user.rs
crates/standx-point-adapter/src/types/: AGENTS.md  enums.rs  mod.rs  models.rs  requests.rs  responses.rs
crates/standx-point-adapter/src/ws/: AGENTS.md  client.rs  message.rs  mod.rs
crates/standx-point-adapter/tests/: AGENTS.md  auth_tests.rs  http_tests.rs  ws_tests.rs
crates/standx-point-adapter/tests/common/: mod.rs
crates/standx-point-gui/: AGENTS.md  Cargo.toml
crates/standx-point-gui/src/: AGENTS.md  lib.rs  main.rs
crates/standx-point-gui/src/db/: AGENTS.md  mod.rs  schema.sql
crates/standx-point-gui/src/price/: mod.rs
crates/standx-point-gui/src/state/: mod.rs
crates/standx-point-gui/src/task/: executor.rs  mod.rs  state_machine.rs
crates/standx-point-gui/src/ui/: AGENTS.md  account_form.rs  account_panel.rs  mod.rs  root.rs  sidebar.rs  status_bar.rs  task_card.rs  task_detail.rs  task_form.rs
crates/standx-point-mm-strategy/: AGENTS.md  Cargo.toml  README.md
crates/standx-point-mm-strategy/examples/: AGENTS.md  config.yaml  multi_task.yaml  single_task.yaml
crates/standx-point-mm-strategy/src/: AGENTS.md  config.rs  lib.rs  main.rs  market_data.rs  metrics.rs  order_state.rs  risk.rs  strategy.rs  task.rs
crates/standx-point-mm-strategy/src/app/: event.rs  mod.rs  state.rs
crates/standx-point-mm-strategy/src/cli/: init.rs  interactive.rs  mod.rs
crates/standx-point-mm-strategy/src/state/: storage.rs
crates/standx-point-mm-strategy/src/tui/: AGENTS.md  README.md  app.rs  events.rs  mod.rs  runtime.rs  state.rs  terminal.rs
crates/standx-point-mm-strategy/src/tui/ui/: AGENTS.md  account.rs  layout.rs  logs.rs  mod.rs  orders.rs  positions.rs  task_list.rs
crates/standx-point-mm-strategy/src/tui/ui/modal/: AGENTS.md  create_account.rs  create_task.rs  mod.rs
crates/standx-point-mm-strategy/src/ui/: mod.rs
crates/standx-point-mm-strategy/src/ui/components/: AGENTS.md  account_form.rs  detail_view.rs  help.rs  help_text.rs  menu_bar.rs  mod.rs  modal.rs  sidebar.rs  single_select.rs  status_bar.rs  task_form.rs
crates/standx-point-mm-strategy/tests/: cli_mode_test.rs  integration_test.rs  reconnection_test.rs  shutdown_test.rs  tui_mode_test.rs
examples/json-persistence-demo/: Cargo.toml
examples/json-persistence-demo/src/: lib.rs  main.rs
