[workspace]
resolver = "2"
members = [
    "crates/standx-point-adapter",
    "crates/standx-point-mm-strategy",
    "crates/standx-point-gui", "examples/json-persistence-demo",
]
[workspace.dependencies]
standx-point-adapter = { path = "crates/standx-point-adapter" }
standx-point-mm-strategy = { path = "crates/standx-point-mm-strategy" }
standx-point-gui = { path = "crates/standx-point-gui" }
uuid = { version = "1.12", features = ["v4"] }

[patch.crates-io]
core-foundation = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-graphics = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-graphics-types = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-text = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }


