[workspace]
resolver = "2"
members = [
    "crates/standx-point-adapter",
    "crates/standx-point-mm-strategy"
]
[workspace.dependencies]
standx-point-adapter = { path = "crates/standx-point-adapter" }
standx-point-mm-strategy = { path = "crates/standx-point-mm-strategy" }
uuid = { version = "1.12", features = ["v4"] }



