[package]
name = "standx-point-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
bs58 = "0.5"
uuid = { version = "1.12", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
url = "2.5"
tracing = "0.1"
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
rstest = "0.24"
