[package]
name = "standx-point-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }
standx-point-adapter = { workspace = true }
standx-point-mm-strategy = { workspace = true }
rust_decimal = { version = "1.36", features = ["serde"] }
rusqlite = "0.33"
r2d2 = "0.8"
r2d2_sqlite = "0.26"
aes-gcm = "0.10"
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"


