[package]
name = "standx-point-mm-strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
standx-point-adapter = { workspace = true }
tokio = { version = "1.43", features = ["full"] }
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
tokio-util = "0.7"
uuid = { workspace = true }
config = "0.15"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
