[package]
name = "json-persistence-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.10"
moka = { version = "0.12", features = ["sync"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
